<resources>
    <string name="app_name">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init_text">Title</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="add_note">Add Note</string>
</resources>